pkl-core/src/test/files/LanguageSnippetTests/input/errors/reference28.pkl
import "pkl:ref"

typealias MyRef<T> = ref.Reference<ref.Domain, Mapping<String, T?>>

myRef: MyRef<String>
